PS-11: Migrate code from Java 11 to Java 8